@@ -4,7 +4,8 @@ Changelog
 0.9 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Work around jira-python bug #60 that makes multiple connections to different
+  servers impossible.
 
 
 0.8 (2013-09-19)
